# spcs-airflow

./: .env.example  .gitignore  .gitlab-ci.yml  CONSTITUTION.md  LICENSE  README.md  SPECIFICATION.md  docker-compose.yaml  pytest.ini
dags/: e2e_snowflake_objects.py  example_snowflake.py  example_taskflow.py  snowflake_etl_pipeline.py
dags/utils/: __init__.py  snowflake_conn.py
docs/: PG18_INCOMPATIBILITY.md
images/airflow/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
images/postgres/: Dockerfile
images/redis/: Dockerfile
scripts/: build_and_push.sh  deploy.sh  generate_secrets.sh  sync_dags.sh  teardown.sh
specs/: af_api_server.yaml  af_dag_processor.yaml  af_postgres.yaml  af_redis.yaml  af_scheduler.yaml  af_triggerer.yaml  af_workers.yaml
sql/: 01_setup_database.sql  02_setup_stages.sql  03_setup_secrets.sql.template  04_setup_networking.sql  05_setup_compute_pools.sql  06_setup_image_repo.sql  07_create_services.sql  07b_update_services.sql  08_validate.sql  09_suspend_all.sql  10_resume_all.sql
tests/: conftest.py  requirements-test.txt  test_ci_config.py  test_compose_config.py  test_cross_file_consistency.py  test_dag_syntax.py  test_docker_builds.py  test_e2e_spcs.py  test_entrypoint.py  test_env_config.py  test_infrastructure_consistency.py  test_local_compose.py  test_multi_container_consistency.py  test_pyproject.py  test_readme_accuracy.py  test_service_connectivity.py  test_shell_scripts.py  test_snowflake_conn.py  test_spec_schemas.py  test_sql_objects.py  test_sync_dags_behavior.py
