[project]
name = "airflow-spcs"
version = "3.1.7"
description = "Additional dependencies for Airflow 3.1.7 on SPCS"
requires-python = ">=3.12"

# Pinned to Airflow 3.1.7 constraints (constraints-3.12.txt).
# To update: check https://github.com/apache/airflow/blob/constraints-3.1.7/constraints-3.12.txt
dependencies = [
    "apache-airflow-providers-celery==3.15.2",
    "apache-airflow-providers-postgres==6.5.3",
    "apache-airflow-providers-redis==4.4.2",
    "apache-airflow-providers-snowflake==6.9.0",
    "celery[redis]==5.6.2",
    "redis==6.4.0",
    "psycopg2-binary==2.9.11",
]
